Complete the minimax function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <div class="btns">
     <button class="friendly">Friendly</button>
     <button class="computer">Computer</button>
+    <div class="difficulty">
+    </div>
     <button class="reset">Reset</button>
   </div>
   <section>
